Fix mobile horizontal scroll completely

--- a/css/layout.css
+++ b/css/layout.css
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: 0;
     pointer-events: none;
@@ -92,6 +92,7 @@ header {
     width: 100%;
     position: relative;
     z-index: 1;
+    overflow-x: hidden;
 }
 
 /* Snap Scrolling Configuration */
@@ -103,6 +104,7 @@ html {
 .left-stream {
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 /* Each section is a slide */
